<resources>
    <string name="app_name">30_范舒翼</string>
    <string name="app_title">30_范舒翼</string>
    <string name="index_name">首页</string>
    <string name="collect_name">收藏</string>
    <string name="set_name">设置</string>
    <string name="my_interest">我的关注</string>
    <string name="my_filter">我的屏蔽</string>
    <string name="my_history">最近浏览</string>
    <string name="night_mode">夜间模式</string>
    <string name="no_image_mode">无图模式</string>
    <string name="clean_cache">清除缓存</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="read">朗读</string>
    <string name="cate1">科技</string>
    <string name="cate2">教育</string>
    <string name="cate3">军事</string>
    <string name="cate4">国内</string>
    <string name="cate5">社会</string>
    <string name="cate6">文化</string>
    <string name="cate7">汽车</string>
    <string name="cate8">国际</string>
    <string name="cate9">体育</string>
    <string name="cate10">财经</string>
    <string name="cate11">健康</string>
    <string name="cate12">娱乐</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="collected">已收藏</string>
    <string name="weibo">微博</string>
    <string name="wechat">微信</string>
    <string name="choose_share">选择分享</string>
    <string name="not_found">找不到该分享应用组件</string>
    <string name="cache_cleaned">已清除缓存</string>
</resources>
