<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/my_divider"
            android:showDividers="middle|end">

            <Button
                android:id="@+id/my_interest"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/my_interest"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"/>

            <Button
                android:id="@+id/my_filter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/my_filter"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp" />

            <Button
                android:id="@+id/theme_color"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/theme_color"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"/>

            <Button
                android:id="@+id/clean_cache"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/clean_cache"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp" />

            <Switch
                android:id="@+id/night_mode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/night_mode"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"/>

            <Switch
                android:id="@+id/no_image_mode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/no_image_mode"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/index_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/index_name"
                android:textColor="@color/grey"
                />

            <Button
                android:id="@+id/collect_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/collect_name"
                android:textColor="@color/grey"/>

            <Button
                android:id="@+id/set_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/set_name"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
