<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/index_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/index_name"
                android:textColor="@color/grey"
                />
`
            <Button
                android:id="@+id/collect_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/collect_name"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/set_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/set_name"
                android:textColor="@color/grey" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
